fix: hide 'see more' button on small screens in about section

--- a/css/style.css
+++ b/css/style.css
@@ -982,6 +982,7 @@ section#sobre-mi {
 
 @media(max-width:440px) {
   .about-container .see-more {
+    display: none;
     bottom: 8%;
   }
 }
